<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.senac.pi.professor.EditProfessorActivity">

    <TextView
        style="@style/TxtViewStyle" />

    <TextView
        style="@style/TxtViewStyle"
        android:text="@string/nome_professor"/>

    <EditText
        style="@style/EdtStyle"
        android:id="@+id/edtNomeProfessor"
        android:inputType="text"/>

    <TextView
        style="@style/TxtViewStyle"
        android:text="@string/disciplina_professor"/>

    <EditText
        style="@style/EdtStyle"
        android:id="@+id/edtDisciplinaProfessor"
        android:inputType="text"/>

    <Button
        style="@style/BtnStyle"
        android:id="@+id/btnCadastrarProfessor"
        android:text="@string/btn_cadastrar"/>

    <Button
        style="@style/BtnStyle"
        android:id="@+id/btnListarProfessor"
        android:text="@string/btn_listar"/>

</LinearLayout>
